fixing sonarqube issue